# script-tuner

./: .env.example  .gitignore  README.md  pyproject.toml
background/: QAIP_proposal_report.md  proposal_report_template.md
docs/: status.md
docs/decisions/: 0001-jsonl-output-format.md  0002-sbcsae-license-policy.md  0003-pause-marker-tokenization.md  0004-backchannel-handling.md  0005-style-as-dataset-metadata.md  0006-adapter-structure-and-common-ir.md
docs/design/: dataset_review.md  finetuning_pipeline.md  finetuning_pipeline_ko.md  preprocessing_pipeline.md
scripts/: download_data.py  push_adapter.py
scripttuner/: cli.py
scripttuner/data_sources/: sbcsae.py
scripttuner/llm/: openai_compatible.py  openrouter.py
scripttuner/preprocessing/: ir.py  monologue.py  pairs.py  stats.py
scripttuner/preprocessing/chat/: cleaner.py  parser.py
scripttuner/training/: formatters.py  generate.py  registry.py  split.py  style.py  train.py
tests/: test_cli.py  test_smoke.py
tests/data_sources/: test_sbcsae.py
tests/llm/: test_openrouter.py
tests/preprocessing/: test_monologue.py  test_pairs.py  test_stats.py
tests/preprocessing/chat/: test_cleaner.py  test_parser.py
tests/training/: test_finetune_prep.py  test_registry.py
